# tech_challenge_3

./: .gitignore  README.md  pyproject.toml
src/: constants.py  utils.py
src/contexts/: dataset.py  entities.py  executors.py  model.py  repositories.py  routes.py  tables.py
src/contexts/dataset/: __init__.py  dataset.py  entities.py  repositories.py  routes.py  tables.py
src/contexts/model/: entities.py  executors.py  repositories.py  routes.py  tables.py
src/database/: __init__.py  repositories.py  tables.py
src/scripts/: build_csv.py  create_ds.py  download_pretrained_model.py  get_validation_metrics.py
src/server/: config.py
