[project]
name = "tech-challenge-3"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "markupsafe==2.1.5",
    "numpy>=2.1.2",
    "rich>=14.1.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=25.9.0",
    "isort>=6.0.1",
    "mypy>=1.18.2",
    "polars>=1.33.1",
    "ruff>=0.13.1",
    "typer>=0.19.1",
    "types-aiofiles>=24.1.0.20250822",
]

[project.optional-dependencies]
cpu = [
  "torch",
]
gpu = [
  "torch",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "torch-cpu", extra = "cpu" },
  { index = "torch-gpu", extra = "gpu" },
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
